--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="flex-center">
                         <div class="container">
                             <div class="row">
-                                <div class="col-md-offset-6 col-md-6">
+                                <div class="col-xs-12 col-md-offset-6 col-md-6">
                                     <div class="header-composition">
                                         <div class="teach">
                                             <img src="img/stars.png" alt="stars">
@@ -92,7 +92,7 @@
                             <div class="col-md-4">
                                 <i class="fa fa-address-card-o"></i> 3-й Крутицкий переулок, д.11.
                             </div>
-                            <div class="col-md-3">
+                            <div class="hidden-xs col-md-3">
                                 <i class="fa fa-mobile"></i> +7 (495) 922-44-44
                             </div>
                             <div class="col-md-5">
