--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+    
 	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
+	<meta name="format-detection" content="telephone=no">
 
 	<!-- Chrome, Firefox OS and Opera -->
 	<meta name="theme-color" content="#000">
@@ -86,13 +87,13 @@
                     </nav>
                 </div>
                 
-                <div class="header-contacts">
+                <div class="header-contacts hidden-xs">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-4">
                                 <i class="fa fa-address-card-o"></i> 3-й Крутицкий переулок, д.11.
                             </div>
-                            <div class="hidden-xs col-md-3">
+                            <div class="col-md-3">
                                 <i class="fa fa-mobile"></i> +7 (495) 922-44-44
                             </div>
                             <div class="col-md-5">
