--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-5">
-                            <h1>Салон <span>Happy Time</span></h1>
-                            <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Буквенных, семантика запятых, рот злых там ты взобравшись? Текстов, текста! Она запятых, текста послушавшись силуэт.</p>
-                            <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Инициал, над рыбного ipsum, власти заглавных злых он предложения собрал!</p>
+                            <h1>Студия <span>Happy Time</span></h1>
+                            <p>Красота радует, привлекает, придает гармонию всему окружающему миру. Это тайна, которую стремятся раскрыть художники и поэты. Студия Happy Time поможет раскрыть тайну красоты для Вас.</p>
+                            <p>Центр красоты Happy Time — место, где заботятся о совершенстве Вашей внешности, здоровье и создают хорошее настроение.</p>
                         </div>
                         <div class="col-md-7">
                             <div class="section-gallary fotorama" data-nav="thumbs" data-thumbwidth="110" data-thumbheight="70" data-thumbsborder="4" data-thumbmargin="10">
@@ -282,7 +282,7 @@
             <div class="main-footer">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-2 col-sm-6">
+                        <div class="col-lg-2 col-xs-6">
                             <div class="footer-column">
                                 <img src="img/logo.svg" alt="" class="logo-footer">
                                 <div class="footer-social">
@@ -295,7 +295,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-sm-6">
+                        <div class="col-lg-3 col-xs-6">
                             <div class="footer-column">
                                 <div class="footer-menu">
                                     <ul>
@@ -308,14 +308,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-sm-6">
+                        <div class="col-lg-3 col-xs-12">
                             <div class="footer-column">
                                 <p class="footer-addr"><i class="fa fa-address-card-o"></i> 3-Й КРУТИЦКИЙ ПЕРЕУЛОК, Д.11. м. Пролетарская (50м)</p>
                                 <p class="footer-addr"><i class="fa fa-clock-o"></i> Время работы: Ежедневно, <br>10:00 - 22:00</p>
                                 <p class="footer-addr"><span class="footer-phone"><i class="fa fa-mobile"></i> +7 (495) 922-44-44</span></p>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-4 col-xs-12">
                             <div class="footer-column">
                                 <div class="map">
                                     <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1f7850fc91202a12c5906c6d290c679533cbac706e6e313407adb63f373a6e09&amp;width=100%&amp;height=200&amp;lang=ru_RU&amp;scroll=true"></script>
