--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                         <div class="teach">
                                             <img src="img/stars.png" alt="stars">
                                             <p class="teach-title"><span>Обучение</span></p>
-                                            <h1 class="header-title">Наращивание ресниц</h1>
+                                            <h1 class="header-title">Мастеров индустрии красоты</h1>
                                             <p class="text-price">Цена на обучение от 2 500 руб</p>
                                             
                                             <a href="#" class="button button-white more-info">Подробнее</a>
@@ -111,10 +111,10 @@
                     <div class="carousel-services-item">
                         <div class="carousel-services-content">
                             <div class="carousel-services-composition">
-                                <h3>Наращивание ресниц <span>premium class</span></h3>
+                                <h3><span>обучение</span> Наращивание ресниц <span>Premium class</span></h3>
                                 <ul class="carousel-services-list">
                                     <li>«Быстрый старт» полный курс с «0» - <strong>3500</strong> <i class="fa fa-rub"></i></li>
-                                    <li>Повышение квалификации - <strong>5500</strong> <i class="fa fa-rub"></i></li>
+                                    <li>Обьемное наращивание ресниц - <strong>5500</strong> <i class="fa fa-rub"></i></li>
                                     <li>Комбинированные блоки - <strong>АКЦИИ</strong></li>
                                 </ul>
                                 <a href="#" class="button-white">Все услуги</a>
@@ -127,11 +127,11 @@
                     <div class="carousel-services-item">
                         <div class="carousel-services-content">
                             <div class="carousel-services-composition">
-                                <h3>Работа с натуральными <span>ресницами и бровями</span></h3>
+                                <h3><span>обучение</span> Работа с натуральными <span>ресницами и бровями</span></h3>
                                 <ul class="carousel-services-list">
                                     <li>Ламинирование - <strong>2500</strong> <i class="fa fa-rub"></i></li>
                                     <li>Ботокс - <strong>5000</strong> <i class="fa fa-rub"></i></li>
-                                    <li>Коллагенирование - <strong>5000</strong> <i class="fa fa-rub"></i></li>
+                                    <li>Коллагенирование - <strong>2500</strong> <i class="fa fa-rub"></i></li>
                                     <li>Биозавивка + химическая завивка - <strong>2500</strong> <i class="fa fa-rub"></i></li>
                                 </ul>
                                 <a href="#" class="button-white">Все услуги</a>
@@ -163,10 +163,10 @@
                             <div class="carousel-services-composition">
                                 <h3>Маникюр / Педикюр <span>обучение</span></h3>
                                 <ul class="carousel-services-list">
-                                    <li>Быстрый старт» с «0» - <strong>2500</strong> <i class="fa fa-rub"></i></li>
-                                    <li>Повышение квалификации - <strong>2500</strong> <i class="fa fa-rub"></i></li>
-                                    <li>Дизайн ногтей - <strong>2500</strong> <i class="fa fa-rub"></i></li>
-                                    <li>Наращивание ногтей - <strong>2500</strong> <i class="fa fa-rub"></i></li>
+                                    <li>Быстрый старт» с «0» - <strong>9500</strong> <i class="fa fa-rub"></i></li>
+                                    <li>Повышение квалификации - <strong>7500</strong> <i class="fa fa-rub"></i></li>
+                                    <li>Дизайн ногтей - <strong>6500</strong> <i class="fa fa-rub"></i></li>
+                                    <li>Наращивание ногтей - <strong>9500</strong> <i class="fa fa-rub"></i></li>
                                 </ul>
                                 <a href="#" class="button-white">Все услуги</a>
                             </div>
